[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "you@example.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uv = "uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
